--- a/wp-content/themes/duck-and-cover/assets/sass/forms/_buttons.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/forms/_buttons.scss
@@ -13,6 +13,7 @@ input[type="submit"],
     letter-spacing: 0 !important;
     @extend %transition;
     cursor: pointer;
+    background: transparent;
 }
 
 .primary-button {
