--- a/wp-content/themes/duck-and-cover/assets/sass/site/secondary/_widgets.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/site/secondary/_widgets.scss
@@ -19,7 +19,7 @@
     // padding-bottom: 30px;
     flex: 16.66%;
     border-right: 1px solid #d8d8d8;
-    padding: 10px 20px;
+    padding: 10px 0;
     &:last-child {
       border-right: none;
     }
