--- a/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
@@ -6,6 +6,19 @@
   .footer-inner {
     padding: 0 80px;
   }
+  .menu {
+    margin-top: 8px;
+    li {
+      a {
+        @extend .gibson-light;
+        text-transform: uppercase;
+        font-size: 13px;
+      }
+    }
+  }
+  input[type=email] {
+    width: 100%;
+  }
   .footer-social {
     text-align: center;
     margin-bottom: 60px;
