--- a/wp-content/themes/duck-and-cover/assets/sass/main.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/main.scss
@@ -85,5 +85,6 @@
 @import "duck/celebwears";
 @import "duck/collections";
 @import "duck/front-page";
+@import "duck/our-story";
 @import "duck/blog";
 @import "duck/share-buttons";
