--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_login-register.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_login-register.scss
@@ -1,30 +1,43 @@
 #customer_login {
-    padding-top: 70px;
+    padding-top: 20px;
     margin-bottom: 140px;
-    .page-title {
-        margin-bottom: 80px;
+    .login-header {
+      margin-bottom: 56px;
+      h1 {
+        line-height: 37px;
+      }
+    }
+    .register-header {
+      margin-bottom: 34px;
+      h1 {
+        line-height: 37px;
+      }
+    }
+    .register-sub-header {
+      @extend .gibson-light;
     }
     .login,
     .register {
         label {
-            &.inline {
-                display: inline-block;
-                text-transform: inherit;
-            }
+          &.inline {
+              display: inline-block;
+              text-transform: inherit;
+          }
         }
         input {
-            &.button {
-                width: 100%;
-            }
+          &.button {
+              //width: 100%;
+              background: transparent;
+          }
         }
         .lost_password {
             margin-top: 28px;
             a {
                 float: right;
                 border-bottom: 1px solid;
-                font-size: 13px;
-                text-transform: uppercase;
+                font-size: 14px;
                 letter-spacing: 0;
+                @extend .gibson-light;
             }
         }
     }
