--- a/wp-content/themes/duck-and-cover/assets/css/main.css
+++ b/wp-content/themes/duck-and-cover/assets/css/main.css
@@ -9327,8 +9327,7 @@ form .form-row-last {
       visibility: hidden;
       display: block;
       width: 100%;
-      height: 100%;
-      border: 1px solid #000; }
+      height: 100%; }
   .product-thumb img {
     display: block;
     width: 100%; }
