--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product.scss
@@ -12,7 +12,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            border: 1px solid #000;
+            //border: 1px solid #000;
             @extend %transition;
         }
     }
