--- a/wp-content/themes/duck-and-cover/assets/sass/main.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/main.scss
@@ -87,4 +87,5 @@
 @import "duck/front-page";
 @import "duck/our-story";
 @import "duck/blog";
+@import "duck/sliders";
 @import "duck/share-buttons";
