--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_blog.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_blog.scss
@@ -1,6 +1,7 @@
 // Article listing
 .blog-list-image-square {
   display: block;
+  margin-bottom: 20px;
   img {
     width: 100%;
     height: auto;
@@ -11,33 +12,17 @@
   article {
     padding: 0 40px 100px 40px;
     .post-meta {
-      margin: 30px 0;
-      .post-meta-by {
-        font-size: 14px;
-      }
-      .post-meta-name {
-        @extend .gibson-semibold;
-      }
+      margin: 0 0 8px 0;
       .post-meta-date {
         position: relative;
         @extend .gibson-semibold;
-        padding-left: 30px;
-        &:before {
-          content: '';
-          position: absolute;
-          left: 0;
-          width: 20px;
-          height: 1px;
-          bottom: 0;
-          background: black;
-        }
       }
     }
+    h4 {
+      margin: 0 0 10px 0;
+    }
     .blog-meta-footer {
-      @include clearfix();
-      .read-more {
-        float: right;
-      }
+      margin: 30px 0 0 0;
     }
   }
 }
