--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
@@ -5,4 +5,8 @@
   @include media-breakpoint-up(md) {
     margin-top: 71px;
   }
+  .page-title {
+    @extend .gibson-light;
+    font-size: 80px !important;
+  }
 }
