--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -83,10 +83,7 @@
 
   // Instagram feed
   .front-page-instagram {
-    margin: 100px -20px 60px -20px;
-    h2 {
-      text-indent: 20px;
-    }
+    margin: 100px 0 60px 0;
   }
   .widget_facewp_instagram {
     ul {
