--- a/wp-content/themes/duck-and-cover/assets/sass/site/secondary/_widgets.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/site/secondary/_widgets.scss
@@ -31,6 +31,7 @@
       // text-align: left;
       // font-size: 14px;
       text-transform: uppercase;
+      color: #4C4C4C;
     }
 }
 .sidebar .widget {
