--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -68,8 +68,8 @@
         height: 400px;
         right: 100px;
         width: 300px;
-        background-size: cover;
-        background-position: center center;
+        //background-size: cover;
+        background-position: center 50%;
         background-repeat: no-repeat;
         .button {
           bottom: 40px;
