--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_sliders.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_sliders.scss
@@ -1,3 +1,9 @@
+.tp-bullet {
+  width: 8px !important;
+  height: 8px !important;
+  border-radius: 50% !important;
+}
+
 .duck-slider-caption {
   text-align: left !important;
   h3 {
