--- a/wp-content/themes/duck-and-cover/assets/sass/search/_search-type-1.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/search/_search-type-1.scss
@@ -39,7 +39,7 @@
     backface-visibility: hidden;
     opacity: 0;
     @include transition(all 0.2s);
-    background-color: rgba(216, 18, 15, 0.93);
+    background-color: rgba(216, 18, 15, 0.73) !important;
     .container {
         height: 100%;
         .row {
